--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.1'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.facebook.android:facebook-share:[4,5)'
 }
